add two timers without bags

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Тик-так-бум</h1>
             </div>
             <div class="row">
-                <span class="alert alert-primary" id="gameStatusField">Игра идёт</span>
+                <span class="alert alert-primary" id="gameStatusField">Приготовьтесь...</span>
             </div>
             <div class="row">
                 <div class="col">
