--- a/index.html
+++ b/index.html
@@ -96,14 +96,28 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<h3 id="questionField"></h3>
-					</div>
-					<div class="row">
-						<div id="answer1" class="btn btn-primary form-control text-left answer" style="display:none"></div>
-					</div>
-					<div class="row">
-						<div id="answer2" class="btn btn-danger form-control text-left answer" style="display:none"></div>
+					<div id="answerField">
+						<div class="row">
+							<h3 id="questionField"></h3>
+						</div>
+						<div class="row">
+							<div id="answer1" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+						</div>
+						<div class="row">
+							<div id="answer2" class="btn btn-danger form-control text-left answer" style="display:none"></div>
+						</div>
+						<div class="row">
+							<div id="answer3" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+						</div>
+						<div class="row">
+							<div id="answer4" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+						</div>
+						<div class="row">
+							<div id="answer5" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+						</div>
+						<div class="row">
+							<div id="answer6" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+						</div>
 					</div>
 				</div>
 			</div>
