--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
 	<div class="container">
 		<div class="row game-card align-items-center">
-			<div class="col col-md-5 offset-md-3">
-				<h1>Тик-так-бум</h1>
+			<div class="col col-md-8 offset-md-2">
 				<div id="accordion" class="myaccordion">
+					<div class="mb-3 offset-md-1">
+						<h1>Тик-так-бум</h1>
+					</div>
 					<div class="card">
 						<div class="card-header" id="headingOne">
 							<button class="d-flex align-items-center justify-content-between btn btn-link"
@@ -32,7 +34,7 @@
 						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
 							<div class="container">
 								<div class="row">
-									<div class="col-10">
+									<div class="col-6">
 										<div class="input-group mb-3">
 											<input type="number" id="countOfPlayersField" class="form-control"
 												placeholder="Введите количество игроков" aria-describedby="button-addon1">
@@ -60,7 +62,7 @@
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
 							<div class="container">
 								<div class="row">
-									<div class="col-9">
+									<div class="col-6">
 										<div class="input-group mb-3">
 											<input type="number" id="countOfTimeField" class="form-control"
 												placeholder="Введите время в сек." aria-describedby="button-addon2">
@@ -73,18 +75,18 @@
 						<output id="outputText"></output>
 					</div>
 					<div class="row">
-						<div class="col col-md-5">
+						<div class="col col-md-3 offset-md-1">
 							<button class="btn btn-info" type="button" id="buttonStart" style="display:block">Старт!</button>
 							<button class="btn btn-info" type="button" id="buttonFinish" style="display:none">Закончить
 								игру!</button>
 						</div>
-						<div class=" col col-md-5">
+						<div class=" col col-md-3 offset-md-4">
 							<div class="rules">
 								<a class="btn rules float-right" href="/rules.html" target="_blank"> Правила игры</a>
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row statusField">
 						<span class="alert alert-primary" id="gameStatusField" style="display:none">Приготовьтесь...</span>
 					</div>
 					<div class="row">
@@ -96,27 +98,27 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						<h3 id="questionField"></h3>
+					</div>
 					<div id="answerField">
 						<div class="row">
-							<h3 id="questionField"></h3>
+							<div id="answer1" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 						<div class="row">
-							<div id="answer1" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+							<div id="answer2" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 						<div class="row">
-							<div id="answer2" class="btn btn-danger form-control text-left answer" style="display:none"></div>
+							<div id="answer3" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 						<div class="row">
-							<div id="answer3" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+							<div id="answer4" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 						<div class="row">
-							<div id="answer4" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+							<div id="answer5" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 						<div class="row">
-							<div id="answer5" class="btn btn-primary form-control text-left answer" style="display:none"></div>
-						</div>
-						<div class="row">
-							<div id="answer6" class="btn btn-primary form-control text-left answer" style="display:none"></div>
+							<div id="answer6" class="btn btn-answer form-control text-left answer" style="display:none"></div>
 						</div>
 					</div>
 				</div>
@@ -140,6 +142,7 @@
 		crossorigin="anonymous"></script>
 	<script>
 		$("#accordion").on("hide.bs.collapse show.bs.collapse", e => {
+			e.stopPropagation();
 			$(e.target)
 				.prev()
 				.find("i:last-child")
